2002-11-15  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/dl-machine.h (elf_machine_rela): Handle R_386_COPY.
	* sysdeps/arm/dl-machine.h (elf_machine_rela): Handle R_ARM_COPY.

2002-11-15  Roland McGrath  <roland@redhat.com>

	* math/Makefile (libm-calls): Change s_ldexp to m_ldexp.
	* Makerules ($(+sysdir_pfx)sysd-rules): Emit pattern rules for m_%.[Sc]
	from sysdeps/.../s_%.[Sc] with commands $(+make-include-of-dep).
	(+make-include-of-dep): New canned sequence.

	* stdlib/canonicalize.c (__realpath): Check for malloc failure.
	From Dmitry V. Levin <ldv@altlinux.org>.

2002-11-14  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/errno.c (__libc_errno): Remove alias.
	* inet/herrno.c (__libc_h_errno): Likewise.
	* resolv/res_libc.c (__libc_res): Likewise.
	[USE___THREAD]: Use this in place of [USE_TLS && HAVE___THREAD].
	(__res_state) [! USE___THREAD]: Don't define as weak.
	* csu/Versions: Revert last change.
	* resolv/Versions: Revert last change.

	* Makerules ($(common-objpfx)%.make): New pattern rule.
	* tls.make.c: New file.
	* Makefile (distribute): Add it.

	* sysdeps/generic/errno.c [! USE___THREAD]
	[HAVE_ELF && SHARED && DO_VERSIONING] (errno, _errno): Declare these
	with compat_symbol so they are not link-time visible.
	[! USE___THREAD] (__libc_errno): New alias for errno.
	* csu/Versions [!(USE_TLS && HAVE___THREAD)] (libc: GLIBC_PRIVATE):
	Add __libc_errno here.
	* inet/herrno.c [USE___THREAD]: Use this conditional
	in place of [USE_TLS && HAVE___THREAD].
	[! USE___THREAD] [HAVE_ELF && SHARED && DO_VERSIONING]
	(h_errno, _h_errno): Declare these with compat_symbol so they are not
	link-time visible.
	[! USE___THREAD] (__libc_h_errno): New alias for h_errno.
	* resolv/res_libc.c [! USE___THREAD]
	[HAVE_ELF && SHARED && DO_VERSIONING] (_res): Likewise.
	(_res): Use __attribute__ ((section (".bss"))) so we can have an alias.
	(__libc_res): Define as alias for _res.
	* resolv/Versions [!(USE_TLS && HAVE___THREAD)] (libc: GLIBC_PRIVATE):